--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,16 +10,37 @@
             </div>
         </div>
         <div class = 'side-panel-main'>
-            
+            <ul class="timeline">
+                <li class="event">
+                    <h3>Dinosaurs Roamed the Earth</h3>
+                    <p>RAWWWWWWRRR 🐢🦂</p>
+                </li>
+                <li class="event" >
+                    <h3>Creative Component Launched</h3>
+                    <p>"We can be all things to all people!" 📣</p>    
+                </li>
+                <li class="event" id="date" >
+                    <h3>Squareflair was Born</h3>
+                    <p></p> <p>"We can be all things to Squarespace users!" 📣</p>    
+                </li>
+                
+                <li class="event">
+                    <h3>Squareflair Today</h3>
+                    <p>"We design and build from scratch!" 📣</p> <p>When we say <em><strong>100% custom</strong></em> we mean it— and we build all sites on the Squarespace Developer platform.</p>
+                    <p>Did you know that all of our pixels are hand-forged from the rarest of subpixels grown and harvested in the <em>Nerd Forest</em>? <br>🤜💥🤛</p>
+                    <p><strong>Our success can be measured by lives and brands enhanced by 9+ years of 100% Squarespace-focused service!</strong></p> 
+                    <p><a href="https://www.squareflair.com">squareflair.com</a></p>
+                </li>
+            </ul>
         </div>
-        
     </div>
     <div id='searchbar' class = 'searchbar-container'>
         <div class = searchbar>
             <button (click) = "toggleTray()" class = 'menu-button' mat-icon-button aria-label="Open Tray">
                 <mat-icon id = 'arrow' class= 'menu-icon'>arrow_forward_ios</mat-icon>
             </button>
-            <input class = 'search-text'>
+            <AutocompleteComponent style class="address-input" (setAddress)="getAddress($event)" addressType="establishment"></AutocompleteComponent>
+            <!--<input placeholder="Type something..." class = 'search-text'>-->
             
         </div>
     </div>
