--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -21,6 +21,9 @@
     background: #E8E9EB;
     box-shadow: 2px 0px 5px 0px rgba(0,0,0,0.35);
     transition: .3s;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     //box-shadow: 0 0 0 9999px rgba(0,0,0,0.5);
 }
 .side-panel-top{
@@ -69,12 +72,7 @@
     align-items: center;
 
 }
-.search-text{
-    outline: none;
-    font-size: 18px;
-    flex: 1;
-    
-}
+
 .menu-icon{
     color: #00000070;
     transform: rotate(-180deg);
@@ -91,93 +89,70 @@
     transform: rotate(0deg);
 }
 ::ng-deep .gmnoprint{
-    display: none
+    display: none;
+}
+
+ul{
+    margin-left: 20px;
+    list-style-type: none;
+    list-style: none;
+}
+li {
+    padding-left: 5px;
+    padding-right: 5px;
+    position: relative;
+    margin: 0;
+    padding-bottom: .4em;
+    padding-top: .4em;
+    padding-left: 3px;
+    vertical-align: center;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0);
+    transition: .4s;
+    border-radius: 8px;
+    cursor: pointer;
+    user-select: none;
+    span{
+        color: rgba(0,0,0,.3);
+        position: absolute;
+        right: 5px;
+    }
+}
+li:hover{
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
+    background: #F09D5120
+}
+li:hover::after{
+    background-color: #F09D51;
 }
   
-  strong {
-    font-weight: 600;
-  }
+li:before {
+    content: '';
+    background-color: #bbb;
+    position: absolute;
+    bottom: 0px;
+    top: 0px;
+    left: -14px;
+    width: 3px;
+}
   
-  h1 {
-   letter-spacing: 1.5px;
-   color: whitesmoke;  
-   font-weight: 400;
-   font-size: 2.4em;
-  }
-  
-  #timeline-content {
-    margin-top: 50px;
-    text-align: center;  
-  }
-  
-  /* Timeline */
-  
-  .timeline {
-    border-left: 120px solid #999;
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;    
-    background: fade(whitesmoke, 3%);
-    color: fade(white, 80%);
-    margin: 50px auto;  
-    letter-spacing: 0.5px;   
-    position: relative;
-    line-height: 1.4em;
-    font-size: 1.03em;   
-    padding: 50px;   
-    list-style: none;
-    text-align: left;  
-    font-weight: 100;  
-    max-width: 30%; 
-    
-    h1 {
-     letter-spacing: 1.5px;
-     font-weight: 100;
-     font-size: 1.4em;    
-    }
-    
-    h2, h3 {
-     letter-spacing: 1.5px;
-     font-weight: 400;
-     font-size: 1.4em;
-    }
-    
-    .event {
-      border-bottom: 1px dashed fade(whitesmoke, 10%);
-      padding-bottom: (50px * 0.5);
-      margin-bottom: 50px;  
-      position: relative;
-  
-      &:last-of-type { 
-        padding-bottom: 0;
-        margin-bottom: 0; 
-        border: none;      
-      }
-  
-      &:before, &:after {
-        position: absolute;
-        display: block;
-        top: 0;
-      }
-  
-      &:before {
-        left: (((120px * 0.6) + 50px + 4px + 11px + (4px * 2)) * 1.5) * -1;    
-        color: fade(whitesmoke, 40%);    
-        content: attr(data-date);
-        text-align: right;
-        font-weight: 100;    
-        font-size: 0.9em;
-        min-width: 120px;
-      }
-  
-      &:after {
-        box-shadow: 0 0 0 4px fade(blue,100%);    
-        left: (50px + 4px + (11px * 0.35)) * -1;        
-        background: lighten(black,5%);    
-        border-radius: 50%;  
-        height: 11px;
-        width: 11px;
-        content: "";
-        top: 5px;
-      }
-    }
+li:after {
+    content: '';
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' aria-hidden='true' viewBox='0 0 32 32' focusable='false'%3E%3Ccircle stroke='none' fill='%23999' cx='16' cy='16' r='10'%3E%3C/circle%3E%3C/svg%3E");
+    position: absolute;
+    background-color: #bbb;
+    border-radius: 100px;
+    left: -18px;
+    top: 9px;
+    height: 12px;
+    width: 12px;
+    transition: .4s;
+}
+.side-panel-main{
+    flex: 1;
+    overflow-y: auto;
+}
+.side-panel-main mat-expansion-panel{
+    margin: 10px;
 }
