--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -49,7 +49,24 @@
     color: #F09D51;
 }
 
-
+h1{
+    margin-top: 50px;
+    margin-left: 15px;
+    mat-icon{
+        position: absolute;
+        cursor: pointer;
+        user-select: none;
+        right: 15px;
+        color: rgba(0,0,0,.3)
+    }
+}
+.footer{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin-bottom: 5px;
+    color: rgba(0,0,0,.3);
+}
 .searchbar-container{
     position: absolute;
     top: 0;
@@ -152,6 +169,13 @@ li:after {
 .side-panel-main{
     flex: 1;
     overflow-y: auto;
+}
+.loading{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .side-panel-main mat-expansion-panel{
     margin: 10px;
