--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
+@import '~overlayscrollbars/css/OverlayScrollbars.css';
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
 
@@ -12,7 +13,7 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$Dash-primary: mat-palette($mat-indigo);
+$Dash-primary: mat-palette( $mat-orange);
 $Dash-accent: mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
